--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "scripts": {
     "dev": "concurrently \"cd client && vite\" \"cd server && nodemon server\"",
     "start": "cd server && node server",
-    "build": "cd client && vite build"
+    "build": "cd client && vite build",
+    "reset": "cd server && node config/reset.js"
   },
   "dependencies": {
     "@picocss/pico": "^1.5.7",
     "concurrently": "^7.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "nodemon": "^2.0.21",
-    "pg": "^8.10.0",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-modal": "^3.16.1",
